[gd_scene load_steps=2 format=3 uid="uid://epoch_main"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="RootVBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/Margin/RootVBox"]
layout_mode = 2
text = "Epoch of Embers â€” Android Prototype"
horizontal_alignment = 1

[node name="ResourcesLabel" type="Label" parent="Panel/Margin/RootVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Resources"

[node name="BuildingsLabel" type="Label" parent="Panel/Margin/RootVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Buildings"

[node name="DragonsLabel" type="Label" parent="Panel/Margin/RootVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Dragons"
autowrap_mode = 2

[node name="SocialLabel" type="Label" parent="Panel/Margin/RootVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Social"

[node name="ButtonsGrid" type="GridContainer" parent="Panel/Margin/RootVBox"]
layout_mode = 2
columns = 2

[node name="UpgradeTownHall" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Upgrade Town Hall"

[node name="UpgradeFarm" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Upgrade Farm"

[node name="UpgradeMine" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Upgrade Mine"

[node name="DragonHunt" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Dragon Hunt"

[node name="PvE" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Run PvE"

[node name="PvP" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Run PvP Raid"

[node name="ChoiceOrder" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Story Choice: Order"

[node name="ChoiceFreedom" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Story Choice: Freedom"

[node name="Save" type="Button" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2
text = "Save Progress"

[node name="Spacer" type="Control" parent="Panel/Margin/RootVBox/ButtonsGrid"]
layout_mode = 2

[node name="LogLabel" type="RichTextLabel" parent="Panel/Margin/RootVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 500)
bbcode_enabled = false
scroll_following = true

[node name="TickTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.0
autostart = true

[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/UpgradeTownHall" to="." method="_on_upgrade_town_hall_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/UpgradeFarm" to="." method="_on_upgrade_farm_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/UpgradeMine" to="." method="_on_upgrade_mine_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/DragonHunt" to="." method="_on_dragon_hunt_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/PvE" to="." method="_on_pve_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/PvP" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/ChoiceOrder" to="." method="_on_choice_order_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/ChoiceFreedom" to="." method="_on_choice_freedom_pressed"]
[connection signal="pressed" from="Panel/Margin/RootVBox/ButtonsGrid/Save" to="." method="_on_save_pressed"]
